--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 --extra-index-url https://download.pytorch.org/whl/cpu
 
 torch==2.8.0+cpu
+torchvision==0.23.0+cpu
 torchaudio==2.8.0+cpu
 
 setuptools
